JETcompiler/Tests/bad/bad017.myout
function "foo" expects 1 arguments, and 0 were provided, line 4.
